 - [ZBXNEXT-918] redesign Administration->Media types (Eduard)
 - [ZBXNEXT-915] redesign Administration->Authentication (Eduard)
 - [ZBXNEXT-966] update jQuery to 1.6.4 (Eduard)
 - [ZBX-1357] updated Brazilian Portuguese, Dutch, German, Japanese, Polish, Russian, Slovak and Ukrainian translations; thanks to Zabbix translators (Richlv)

Bug fixes:
 - [ZBX-4209] fixed warning in latest data when navigating from monitoring->hosts page (Alexei)
 - [ZBX-4208] fixed Brazilian Portuguese being reported as just Portuguese in locale code (Richlv)
 - [ZBX-4151] fixed timer crash due to heap memory corruption (asaveljevs)
 - [ZBX-3755] fixed latest values in cloned items (Sasha)
 - [ZBX-3165] fixed layout of item prototypes form (Vedmak)
 - [ZBX-3342] fixed translation of graphs "Generated in x sec" stamps (Vedmak)
 - [ZBX-3926] fixed "Hide/Show selected" filter in history of log items (Vedmak)
 - [ZBX-4119] fixed items like simple check require agent interface on host, now any interface is enough (asaveljevs, Vedmak)
 - [ZBX-3745] fixed error message when link template with discovery rule to host that does not have needed interface (Vedmak)
 - [ZBX-3896] fixed broken triggers after removed item that is used in trigger (Vedmak)
 - [ZBX-4106] fixed layout of "Status of host triggers" screen element (Vedmak)
 - [ZBX-4061] fixed errors when try to delete already deleted regular expression (Vedmak)
 - [ZBX-4058] fixed working time updating in Administration->Gneral->Working time (Vedmak)
 - [ZBX-4060] fixed error when save map with link updated to connect new element (Vedmak)
 - [ZBX-4166] fixed error in dashboard when configured to show unacknowledged only (Vedmak)
 - [ZBX-4003] fixed error when try to use not existing host group as group for discovered hosts (Vedmak)
 - [ZBX-4165] fixed failing insert into proxy_dhistory queries on the proxy side (rudolfs)
 - [ZBX-2882] fixed wrong item vfs.file.cksum[/vmlinuz] for some templates (Sasha)