@@ -12,5 +12,5 @@ REORG TABLE nodes
 /
 UPDATE nodes SET masterid=NULL WHERE masterid=0
 /
-ALTER TABLE nodes ADD CONSTRAINT c_nodes_1 FOREIGN KEY (masterid) REFERENCES nodes (nodeid) ON DELETE CASCADE
+ALTER TABLE nodes ADD CONSTRAINT c_nodes_1 FOREIGN KEY (masterid) REFERENCES nodes (nodeid)
 /
