@@ -13,6 +13,7 @@ New features:
  - [ZBX-1357] updated Brazilian Portuguese, Dutch, German, Japanese, Polish, Russian, Slovak and Ukrainian translations; thanks to Zabbix translators (Richlv)
 
 Bug fixes:
+ - [ZBX-3275] fixed deleting of master node, it shouldn't delete other nodes (Alexei)
  - [ZBX-4209] fixed warning in latest data when navigating from monitoring->hosts page (Alexei)
  - [ZBX-4208] fixed Brazilian Portuguese being reported as just Portuguese in locale code (Richlv)
  - [ZBX-4151] fixed timer crash due to heap memory corruption (asaveljevs)
